fix(icons): fix name overflow due to no max-width constraint

--- a/src/components/FolderIcon/FolderIcon.module.scss
+++ b/src/components/FolderIcon/FolderIcon.module.scss
@@ -1,5 +1,6 @@
 .desktopIcon {
     height: min-content;
+    max-width: 80px;
     padding: 1px;
 
     display: flex;
